--- a/rails-observers.gemspec.erb
+++ b/rails-observers.gemspec.erb
@@ -12,16 +12,15 @@ Gem::Specification.new do |s|
   s.license     = 'MIT'
 
   s.files         = [<%= files.map(&:inspect).join ',' %>]
-  s.test_files    = [<%= test_files.map(&:inspect).join ',' %>]
   s.executables   = [<%= executables.map(&:inspect).join ',' %>]
   s.require_paths = ["lib"]
 
   s.add_dependency 'activemodel', '>= 4.0'
 
   s.add_development_dependency 'minitest',     '>= 3'
-  s.add_development_dependency 'railties', '>= 4.0'
-  s.add_development_dependency 'activerecord', '>= 4.0'
-  s.add_development_dependency 'actionmailer', '>= 4.0'
-  s.add_development_dependency 'actionpack', '>= 4.0'
+  s.add_development_dependency 'railties',     '>= 4.0', '< 5.1'
+  s.add_development_dependency 'activerecord', '>= 4.0', '< 5.1'
+  s.add_development_dependency 'actionmailer', '>= 4.0', '< 5.1'
+  s.add_development_dependency 'actionpack',   '>= 4.0', '< 5.1'
   s.add_development_dependency 'sqlite3',      '~> 1.3'
 end
