--- a/rails-observers.gemspec.erb
+++ b/rails-observers.gemspec.erb
@@ -15,6 +15,8 @@ Gem::Specification.new do |s|
   s.executables   = [<%= executables.map(&:inspect).join ',' %>]
   s.require_paths = ["lib"]
 
+  s.required_ruby_version = '>= 2.2.2'
+
   s.add_dependency 'activemodel', '>= 4.0'
 
   s.add_development_dependency 'minitest',     '>= 3'
