--- a/rails-observers.gemspec.erb
+++ b/rails-observers.gemspec.erb
@@ -17,7 +17,7 @@ Gem::Specification.new do |s|
 
   s.required_ruby_version = '>= 2.2.2'
 
-  s.add_dependency 'activemodel', '>= 4.0'
+  s.add_dependency 'activemodel', '>= 4.0', '< 5.1'
 
   s.add_development_dependency 'minitest',     '>= 3'
   s.add_development_dependency 'railties',     '>= 4.0', '< 5.1'
